# haquil

./: .gitignore  ChangeLog.md  LICENSE  ReadMe.md  default.nix  hTensor.nix  haquil.cabal  quil.cabal  quil.hs  quil.ipynb  release.nix  shell.nix  test-data.ipynb
src/: Test.hs
src/Data/: Qubit.hs
src/Data/Int/: Util.hs
src/Data/Qubit/: Gate.hs
src/Language/Quil/: Execute.hs  Types.hs
