name               : quil
version            : 0.1.0.0
synopsis           : A Haskell implementation of the Quil instruction set for quantum computing.
description        : This Haskell library implements the Quil language for quantum computing, as specified in "A Practical Quantum Instruction Set Architecture" \<https://arxiv.org/abs/1608.03355/\>.

license            : MIT
license-file       : LICENSE
copyright          : (c) 2017-18 Brian W Bush

author             : Brian W Bush <code@functionally.io>
maintainer         : Brian W Bush <code@functionally.io>

homepage           : https://bitbucket.org/functionally/quil
bug-reports        : https://bwbush.atlassian.net/projects/HQUIL/issues/
package-url        : https://bitbucket.org/functionally/quil/downloads/quil-0.1.0.0.tar.gz

category           : Language
stability          : Unstable

cabal-version      : >= 1.10
build-type         : Simple
extra-source-files : ChangeLog.md

source-repository head
  type             : git
  location         : https://bitbucket.org/functionally/quil

library
  exposed-modules  : Data.Qubit
  hs-source-dirs   : src
  build-depends    : base >= 4.9 && < 4.10
                   , hTensor
  exposed          : True
  buildable        : True
  default-language : Haskell2010
  ghc-options      : -Wall

test-suite quil-test
  main-is          : Test.hs
  hs-source-dirs   : src
  build-depends    : base
                   , hTensor
                   , QuickCheck
  buildable        : True
  type             : exitcode-stdio-1.0
  default-language : Haskell2010
  ghc-options      : -Wall
